--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -32,6 +32,16 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+<div class="row">
+    <div class="header">
+  <div class="six columns">
+     <img src="images/logo-imgr.png" alt="Smiley face" height=20% width=20%>
+  </div>
+  <div class="six columns">
+  <h1>Word of the Tank</h1>
+  </div>
+  </div>
+</div>
 
     <form>
     <div class="row">
