--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -37,35 +37,74 @@
   <div class="six columns">
      <img src="images/logo-imgr.png" alt="Smiley face" height=20% width=20%>
   </div>
-  <div class="six columns">
+  <div class="six columns" id="Logo-text" >
   <h1>Word of the Tank</h1>
   </div>
   </div>
 </div>
 
-    <form>
-    <div class="row">
-      <div class="six columns">
-        <label for="exampleEmailInput">Your email</label>
-        <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
-      </div>
-      <div class="six columns">
-        <label for="exampleRecipientInput">Reason for contacting</label>
-        <select class="u-full-width" id="exampleRecipientInput">
-          <option value="Option 1">Questions</option>
-          <option value="Option 2">Admiration</option>
-          <option value="Option 3">Can I get your number?</option>
-        </select>
-      </div>
-    </div>
-    <label for="exampleMessage">Message</label>
-    <textarea class="u-full-width" placeholder="Hi Dave …" id="exampleMessage"></textarea>
-    <label class="example-send-yourself-copy">
-      <input type="checkbox">
-      <span class="label-body">Send a copy to yourself</span>
-    </label>
-    <input class="button-primary" type="submit" value="Submit">
-  </form>
+<div class="row">
+  <div class="Tittle" class="twelve.columns" >
+    <h2>HOME</h2>
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="Tittle" class="twelve.columns" >
+    <h2>NEWS</h2>
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="Tittle" class="twelve.columns" >
+    <h2>CONTACTS</h2>
+  </div>
+
+</div>
+
+<form>
+<div class="row">
+  <div class="six columns">
+    <label for="exampleEmailInput">Your email</label>
+    <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+  </div>
+  <div class="six columns">
+    <label for="exampleRecipientInput">Reason for contacting</label>
+    <select class="u-full-width" id="exampleRecipientInput">
+      <option value="Option 1">Questions</option>
+      <option value="Option 2">Admiration</option>
+      <option value="Option 3">Can I get your number?</option>
+    </select>
+  </div>
+</div>
+<label for="exampleMessage">Message</label>
+<textarea class="u-full-width" placeholder="Hi Dave …" id="exampleMessage"></textarea>
+<label class="example-send-yourself-copy">
+  <input type="checkbox">
+  <span class="label-body">Send a copy to yourself</span>
+</label>
+<input class="button-primary" type="submit" value="Submit">
+</form>
+
+<div class="row">
+  <div class="Tittle" class="twelve.columns" >
+    <h2>GALLERY</h2>
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="Tittle" class="twelve.columns" >
+    <h2>ABOUT US</h2>
+  </div>
+
+</div>
+
+
+
+
 
     <div class="row">
       <div>asdasda</div>
