--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -65,6 +65,15 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div id="navbar">
+      <a href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#about">About Us</a>
+</div>
+  </footer>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
