--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>World ot the Tank</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -38,28 +38,28 @@
      <img src="images/logo-imgr.png" alt="Smiley face" height=20% width=20%>
   </div>
   <div class="six columns" id="Logo-text" >
-  <h1>Word of the Tank</h1>
+  <h1>World of the Tank</h1>
   </div>
   </div>
 </div>
 
 <div class="row">
   <div class="Tittle" class="twelve.columns" >
-    <h2>HOME</h2>
+    <h2>НАЧАЛО</h2>
   </div>
 
 </div>
 
 <div class="row">
   <div class="Tittle" class="twelve.columns" >
-    <h2>NEWS</h2>
+    <h2>НОВИНИ</h2>
   </div>
 
 </div>
 
 <div class="row">
   <div class="Tittle" class="twelve.columns" >
-    <h2>CONTACTS</h2>
+    <h2>КОНТАКТИ</h2>
   </div>
 
 </div>
@@ -90,30 +90,27 @@
 
 <div class="row">
   <div class="Tittle" class="twelve.columns" >
-    <h2>GALLERY</h2>
+    <h2>ГАЛЕРИЯ</h2>
   </div>
 
 </div>
 
 <div class="row">
   <div class="Tittle" class="twelve.columns" >
-    <h2>ABOUT US</h2>
+    <h2>ЗА НАС</h2>
   </div>
 
 </div>
-
-
-
-
-
-    <div class="row">
-      <div>asdasda</div>
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
-    </div>
-  </div>
+<div class="row">
+<div class="six columns">
+	<h3>Какво е World of the tank?</h3>
+	<p>World of the tank е сайт, в който люботелите на играта "World of Tanks" могат да научават новостите в нея, да коментират относно различните видове танкове и да се любуват на красивите танкове в играта. </p>
+</div>
+<div class="six columns">
+	<h3>Какво е World of the tank?</h3>
+	<p>World of the tank е сайт, в който люботелите на играта "World of Tanks" могат да научават новостите в нея, да коментират относно различните видове танкове и да се любуват на красивите танкове в играта. </p>
+</div>
+</div>
   <footer>
     <div id="navbar">
       <a href="#home">Home</a>
