--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -50,6 +50,8 @@
 
 </div>
 
+
+
 <div class="row">
   <div class="Tittle" class="twelve.columns" >
     <h2>NEWS</h2>
@@ -67,25 +69,26 @@
 <form>
 <div class="row">
   <div class="six columns">
-    <label for="exampleEmailInput">Your email</label>
-    <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+    <label for="exampleEmailInput">Вашият имейл</label>
+    <input class="u-full-width" type="email" placeholder="example" id="exampleEmailInput">
   </div>
   <div class="six columns">
-    <label for="exampleRecipientInput">Reason for contacting</label>
+    <label for="exampleRecipientInput">Причина за контакт</label>
     <select class="u-full-width" id="exampleRecipientInput">
-      <option value="Option 1">Questions</option>
-      <option value="Option 2">Admiration</option>
-      <option value="Option 3">Can I get your number?</option>
+      <option value="Option 1">Как да стана член на екипа</option>
+      <option value="Option 2">Допусната грешка в сайта</option>
+      <option value="Option 3">Идея за нов танк</option>
+      <option value="Option 4">Друга</option>
     </select>
   </div>
 </div>
-<label for="exampleMessage">Message</label>
-<textarea class="u-full-width" placeholder="Hi Dave …" id="exampleMessage"></textarea>
+<label for="exampleMessage">Съобщение</label>
+<textarea class="u-full-width" placeholder="Здравейте …" id="exampleMessage"></textarea>
 <label class="example-send-yourself-copy">
   <input type="checkbox">
-  <span class="label-body">Send a copy to yourself</span>
+  <span class="label-body">Изпрати ми копие</span>
 </label>
-<input class="button-primary" type="submit" value="Submit">
+<input class="button-primary" type="submit" value="Изпрати">
 </form>
 
 <div class="row">
