World of GAMING change

--- a/Skeleton-2.0.4/index.html
+++ b/Skeleton-2.0.4/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>World ot the Tank</title>
+  <title>World of Gaming</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -24,7 +24,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="images/tab-logo.png">
 
 </head>
 <body>
@@ -34,17 +34,15 @@
   <div class="container">
 <div class="row">
     <div class="header">
-  <div class="six columns">
-     <img src="images/logo-imgr.png" alt="Smiley face" height=20% width=20%>
-  </div>
-  <div class="six columns" id="Logo-text" >
-  <h1>World of the Tank</h1>
+  <div class="six.columns">
+     <img src="images/logo-200x200.png" alt="Logo">
+     <img src="images/header-text2.png"alt="World of GAMING"  width="75%">
   </div>
   </div>
 </div>
 
 <div class="row">
-  <div class="Tittle" class="twelve.columns" >
+  <div class="Tittle" class="twelve.columns" id="home" >
     <h2>НАЧАЛО</h2>
   </div>
 
@@ -53,14 +51,14 @@
 
 
 <div class="row">
-  <div class="Tittle" class="twelve.columns" >
+  <div class="Tittle" class="twelve.columns" id="news" >
     <h2>НОВИНИ</h2>
   </div>
 
 </div>
 
 <div class="row">
-  <div class="Tittle" class="twelve.columns" >
+  <div class="Tittle" class="twelve.columns" id="contact" >
     <h2>КОНТАКТИ</h2>
   </div>
 
@@ -69,45 +67,45 @@
 <form>
 <div class="row">
   <div class="six columns">
-    <label for="exampleEmailInput">Вашият имейл</label>
+    <label for="exampleEmailInput">Вашият имейл:</label>
     <input class="u-full-width" type="email" placeholder="example" id="exampleEmailInput">
   </div>
   <div class="six columns">
-    <label for="exampleRecipientInput">Причина за контакт</label>
+    <label for="exampleRecipientInput">Причина за контакт:</label>
     <select class="u-full-width" id="exampleRecipientInput">
-      <option value="Option 1">Как да стана член на екипа</option>
-      <option value="Option 2">Допусната грешка в сайта</option>
-      <option value="Option 3">Идея за нов танк</option>
-      <option value="Option 4">Друга</option>
+      <option value="Option 1">Как да стана член на екипа?</option>
+      <option value="Option 2">Допусната грешка в сайта.</option>
+      <option value="Option 3">Идея за нов танк.</option>
+      <option value="Option 4">Друга.</option>
     </select>
   </div>
 </div>
-<label for="exampleMessage">Съобщение</label>
+<label for="exampleMessage">Съобщение:</label>
 <textarea class="u-full-width" placeholder="Здравейте …" id="exampleMessage"></textarea>
 <label class="example-send-yourself-copy">
   <input type="checkbox">
-  <span class="label-body">Изпрати ми копие</span>
+  <span class="label-body">Изпрати ми копие.</span>
 </label>
 <input class="button-primary" type="submit" value="Изпрати">
 </form>
 
 <div class="row">
-  <div class="Tittle" class="twelve.columns" >
+  <div class="Tittle" class="twelve.columns" id="gallery" >
     <h2>ГАЛЕРИЯ</h2>
   </div>
 
 </div>
 
 <div class="row">
-  <div class="Tittle" class="twelve.columns" >
+  <div class="Tittle" class="twelve.columns" id="about" >
     <h2>ЗА НАС</h2>
   </div>
 
 </div>
 <div class="row">
 <div class="six columns">
-	<h3>Какво е World of the tank?</h3>
-	<p>World of the tank е сайт, в който люботелите на играта "World of Tanks" могат да научават новостите в нея, да коментират относно различните видове танкове и да се любуват на красивите танкове в играта. </p>
+	<h3>Какво е <strong>World of GAMING</strong>?</h3>
+	<p>World of GAMING е сайт, в който люботелите на компютърните игри могат да научават новостите в сферата, да коментират относно различните видове игри и да се любуват на красивите снимки от различните игри. </p>
 </div>
 <div class="six columns">
 	<h3>Какво е World of the tank?</h3>
@@ -116,11 +114,11 @@
 </div>
   <footer>
     <div id="navbar">
-      <a href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#about">About Us</a>
+      <a href="#home">НАЧАЛО</a>
+      <a href="#news">НОВИНИ</a>
+      <a href="#contact">КОНТАКТИ</a>
+      <a href="#gallery">ГАЛЕРИЯ</a>
+      <a href="#about">ЗА НАС</a>
 </div>
   </footer>
 
