почти готова заглавна

--- a/game-warrior-gh-pages/game-warrior-gh-pages/index.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Game Warrior Template</title>
+	<title>World of GAMING</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Game Warrior Template">
-	<meta name="keywords" content="warrior, game, creative, html">
+	<meta name="keywords" content=" game, gaming, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="img/tab-logo.png" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
@@ -44,10 +44,10 @@
 		<div class="container">
 			<!-- logo -->
 			<a class="site-logo" href="index.html">
-				<img src="img/logo.png" alt="">
+				<img src="img/logo1.png" alt="">
 			</a>
 			<div class="user-panel">
-				<a href="#">Login</a>  /  <a href="#">Register</a>
+				<a href="#">Вход</a>  /  <a href="#">Регистрация</a>
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
@@ -56,11 +56,11 @@
 			<!-- site menu -->
 			<nav class="main-menu">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="review.html">Games</a></li>
-					<li><a href="categories.html">Blog</a></li>
-					<li><a href="community.html">Forums</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="index.html">Начало</a></li>
+					<li><a href="review.html">Новини</a></li>
+					<li><a href="categories.html">Галерия</a></li>
+					<li><a href="community.html">За нас</a></li>
+					<li><a href="contact.html">Контакти</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -74,18 +74,18 @@
 			<div class="hs-item set-bg" data-setbg="img/slider-1.jpg">
 				<div class="hs-text">
 					<div class="container">
-						<h2>The Best <span>Games</span> Out There</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada <br> lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. <br>Suspendisse cursus faucibus finibus.</p>
-						<a href="#" class="site-btn">Read More</a>
+						<h2>Най - добрите <span>Игри</span> на пазара</h2>
+						<p><strong>Overwatch:</strong> В третата седмица (24.12.2019 - 02.01.2020) на коледното събитие в играта,<br> а именно "Overwatch Winter Wonderland 2019"  при 3 победи печелите<br> Snow Angel Player Icon, пri 6 Winter Spell Spray, а при 9 - Snow Angel Mercy Skin.</p>
+						<a href="#" class="site-btn">Прочетете още</a>
 					</div>
 				</div>
 			</div>
 			<div class="hs-item set-bg" data-setbg="img/slider-2.jpg">
 				<div class="hs-text">
 					<div class="container">
-						<h2>The Best <span>Games</span> Out There</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada <br> lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. <br>Suspendisse cursus faucibus finibus.</p>
-						<a href="#" class="site-btn">Read More</a>
+						<h2>Най - добрите <span>Игри</span> на пазара</h2>
+						<p><strong>PUBG:</strong> Последният ъпдейт в играта (версия 5.3) дойде през месец Декември<br> с много промени. Вече играчите могат да си запазят настройките за играта в клауд,<br> да избират своето любимо оръжие и още ...</p>
+						<a href="#" class="site-btn">Прочетете още</a>
 					</div>
 				</div>
 			</div>
@@ -96,12 +96,12 @@
 
 	<!-- Latest news section -->
 	<div class="latest-news-section">
-		<div class="ln-title">Latest News</div>
+		<div class="ln-title">Последни новини</div>
 		<div class="news-ticker">
 			<div class="news-ticker-contant">
-				<div class="nt-item"><span class="new">new</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="strategy">strategy</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="racing">racing</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
+				<div class="nt-item"><span class="new">ново</span>World of Tanks пуснаха версия 1.7.0.1805. </div>
+				<div class="nt-item"><span class="strategy">стратегия</span>Най - добрите играчи на Dota 2 за 2019. </div>
+				<div class="nt-item"><span class="racing">симулатори</span>Euro Truck Simulator 2 с ново DLS - Road to the Black Sea. </div>
 			</div>
 		</div>
 	</div>
@@ -114,41 +114,41 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/1.jpg">
-						<span class="cata new">new</span>
+						<span class="cata new">ново</span>
 						<div class="fi-content text-white">
-							<h5><a href="#">Suspendisse ut justo tem por, rutrum</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-							<a href="#" class="fi-comment">3 Comments</a>
+							<h5><a href="#">World of Warcraft раздава награди.</a></h5>
+							<p>По случай 15 години от създаването на играта, играчите получават бонуси. </p>
+							<a href="#" class="fi-comment">3 коментара</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/2.jpg">
-						<span class="cata strategy">strategy</span>
+						<span class="cata strategy">стратегия</span>
 						<div class="fi-content text-white">
-							<h5><a href="#">Justo tempor, rutrum erat id, molestie</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-							<a href="#" class="fi-comment">3 Comments</a>
+							<h5><a href="#">Събитието Retribution приключи.</a></h5>
+							<p>Всички, които са успели да се възползват от бунусите, честито! </p>
+							<a href="#" class="fi-comment">3 коментара</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/3.jpg">
-						<span class="cata new">new</span>
+						<span class="cata new">ново</span>
 						<div class="fi-content text-white">
-							<h5><a href="#">Nullam lacinia ex eleifend orci porttitor</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-							<a href="#" class="fi-comment">3 Comments</a>
+							<h5><a href="#">Коледно събитие в Overwatch.</a></h5>
+							<p>В "Overwatch Winter Wonderland 2019", при 3 победи печелите Snow Angel Player Icon.</p>
+							<a href="#" class="fi-comment">3 коментара</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 p-0">
 					<div class="feature-item set-bg" data-setbg="img/features/4.jpg">
-						<span class="cata racing">racing</span>
+						<span class="cata racing">симулатори</span>
 						<div class="fi-content text-white">
-							<h5><a href="#">Lacinia ex eleifend orci suscipit</a></h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-							<a href="#" class="fi-comment">3 Comments</a>
+							<h5><a href="#">България, Румъния и Труция в ETS2!</a></h5>
+							<p>За 17,99€ можете да закупите последното DLS. </p>
+							<a href="#" class="fi-comment">3 коментара</a>
 						</div>
 					</div>
 				</div>
@@ -162,19 +162,19 @@
 	<section class="recent-game-section spad set-bg" data-setbg="img/recent-game-bg.png">
 		<div class="container">
 			<div class="section-title">
-				<div class="cata new">new</div>
-				<h2>Recent Games</h2>
+				<div class="cata new">ново</div>
+				<h2>Нови заглавия</h2>
 			</div>
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
 					<div class="recent-game-item">
 						<div class="rgi-thumb set-bg" data-setbg="img/recent-game/1.jpg">
-							<div class="cata new">new</div>
+							<div class="cata new">ново</div>
 						</div>
 						<div class="rgi-content">
 							<h5>Suspendisse ut justo tem por, rutrum</h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-							<a href="#" class="comment">3 Comments</a>
+							<a href="#" class="comment">3 коментара</a>
 							<div class="rgi-extra">
 								<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 								<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -185,12 +185,12 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="recent-game-item">
 						<div class="rgi-thumb set-bg" data-setbg="img/recent-game/2.jpg">
-							<div class="cata racing">racing</div>
+							<div class="cata racing">състезателни</div>
 						</div>
 						<div class="rgi-content">
 							<h5>Susce pulvinar metus nulla, vel  facilisis sem </h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-							<a href="#" class="comment">3 Comments</a>
+							<a href="#" class="comment">3 коментара</a>
 							<div class="rgi-extra">
 								<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 								<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -201,12 +201,12 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="recent-game-item">
 						<div class="rgi-thumb set-bg" data-setbg="img/recent-game/3.jpg">
-							<div class="cata adventure">Adventure</div>
+							<div class="cata adventure">приключенски</div>
 						</div>
 						<div class="rgi-content">
 							<h5>Suspendisse ut justo tem por, rutrum</h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-							<a href="#" class="comment">3 Comments</a>
+							<a href="#" class="comment">3 коментара</a>
 							<div class="rgi-extra">
 								<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 								<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -223,40 +223,40 @@
 	<!-- Tournaments section -->
 	<section class="tournaments-section spad">
 		<div class="container">
-			<div class="tournament-title">Tournaments</div>
+			<div class="tournament-title">Турнири</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="tournament-item mb-4 mb-lg-0">
-						<div class="ti-notic">Premium Tournament</div>
+						<div class="ti-notic">Премиум турнир</div>
 						<div class="ti-content">
 							<div class="ti-thumb set-bg" data-setbg="img/tournament/1.jpg"></div>
 							<div class="ti-text">
 								<h4>World Of WarCraft</h4>
 								<ul>
-									<li><span>Tournament Beggins:</span> June 20, 2018</li>
-									<li><span>Tounament Ends:</span> July 01, 2018</li>
-									<li><span>Participants:</span> 10 teams</li>
-									<li><span>Tournament Author:</span> Admin</li>
+									<li><span>Начало на турнира:</span> 8 Февруари 2020</li>
+									<li><span>Край на турнира:</span> 16 Февруари 2020</li>
+									<li><span>Участници:</span> 10 отбора</li>
+									<li><span>Организатор:</span> World of GAMING</li>
 								</ul>
-								<p><span>Prizes:</span> 1st place $2000, 2nd place: $1000, 3rd place: $500</p>
+								<p><span>Награди:</span> 1 място: $2000, 2 място: $1000, 3 място: $500</p>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="tournament-item">
-						<div class="ti-notic">Premium Tournament</div>
+						<div class="ti-notic">Премиум турнир</div>
 						<div class="ti-content">
 							<div class="ti-thumb set-bg" data-setbg="img/tournament/2.jpg"></div>
 							<div class="ti-text">
 								<h4>DOOM</h4>
 								<ul>
-									<li><span>Tournament Beggins:</span> June 20, 2018</li>
-									<li><span>Tounament Ends:</span> July 01, 2018</li>
-									<li><span>Participants:</span> 10 teams</li>
-									<li><span>Tournament Author:</span> Admin</li>
+									<li><span>Начало на турнира:</span> 8 Февруари 2020</li>
+									<li><span>Край на турнира:</span> 16 Февруари 2020</li>
+									<li><span>Участници:</span> 10 отбора</li>
+									<li><span>Организатор:</span> World of GAMING</li>
 								</ul>
-								<p><span>Prizes:</span> 1st place $2000, 2nd place: $1000, 3rd place: $500</p>
+								<p><span>Награди:</span> 1 място: $2000, 2 място: $1000, 3 място: $500</p>
 							</div>
 						</div>
 					</div>
@@ -271,8 +271,8 @@
 	<section class="review-section spad set-bg" data-setbg="img/review-bg.png">
 		<div class="container">
 			<div class="section-title">
-				<div class="cata new">new</div>
-				<h2>Recent Reviews</h2>
+				<div class="cata new">ново</div>
+				<h2>Последни ревюта</h2>
 			</div>
 			<div class="row">
 				<div class="col-lg-3 col-md-6">
@@ -281,30 +281,30 @@
 							<div class="score yellow">9.3</div>
 						</div>
 						<div class="review-text">
-							<h5>Assasin’’s Creed</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<h5>Assasin’’s Creed: Unity</h5>
+							<p>Играта, издадена от Ubisoft в края на 2015 г., все още е доста популярна сред общността.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/2.jpg">
-							<div class="score purple">9.5</div>
+							<div class="score purple">7.9</div>
 						</div>
 						<div class="review-text">
-							<h5>Doom</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<h5>DООМ</h5>
+							<p>Последната версия на играта се появи на бял свят през 2016г. Привлича интерес, но феновете тръпнат в очакване на DOOM:Eternal.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/3.jpg">
-							<div class="score green">9.1</div>
+							<div class="score green">8.5</div>
 						</div>
 						<div class="review-text">
 							<h5>Overwatch</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Анимираният шуутър, популярен най-вече заради възможността за мултиплеър, редовно бива игран от феновете на Blizzard Entertainment</p>
 						</div>
 					</div>
 				</div>
@@ -314,8 +314,8 @@
 							<div class="score pink">9.7</div>
 						</div>
 						<div class="review-text">
-							<h5>GTA</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<h5>GTA V</h5>
+							<p>Класическата игра, с която поколения израстнаха. Последната й версия е от 2013 г., произведението на Rockstar Games бива играно от милиони потребители по света.</p>
 						</div>
 					</div>
 				</div>
@@ -334,13 +334,13 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="footer-logo text-white">
-						<img src="img/footer-logo.png" alt="">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+						<img src="img/logo1.png" alt="">
+						<p>За повече информация отностно "World of GAMING", натиснете таба "За нас" от менюто.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-widget mb-5 mb-md-0">
-						<h4 class="fw-title">Latest Posts</h4>
+						<h4 class="fw-title">Последни публикации</h4>
 						<div class="latest-blog">
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/1.jpg"></div>
@@ -414,11 +414,11 @@
 	<footer class="footer-section">
 		<div class="container">
 			<ul class="footer-menu">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="review.html">Games</a></li>
-				<li><a href="categories.html">Blog</a></li>
-				<li><a href="community.html">Forums</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="index.html">Начало</a></li>
+				<li><a href="review.html">Новини</a></li>
+				<li><a href="categories.html">Галерия</a></li>
+				<li><a href="community.html">За нас</a></li>
+				<li><a href="contact.html">Контакти</a></li>
 			</ul>
 			<p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
