--- a/game-warrior-gh-pages/game-warrior-gh-pages/index.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/index.html
@@ -163,7 +163,7 @@
 		<div class="container">
 			<div class="section-title">
 				<div class="cata new">ново</div>
-				<h2>Нови заглавия</h2>
+				<h2>Предстоящи рилийси</h2>
 			</div>
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
@@ -172,8 +172,8 @@
 							<div class="cata new">ново</div>
 						</div>
 						<div class="rgi-content">
-							<h5>Suspendisse ut justo tem por, rutrum</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
+							<h5>Overwatch 2</h5>
+							<p>Blizzard анонсираха играта на своето събитие BlizzCon 2019. </p>
 							<a href="#" class="comment">3 коментара</a>
 							<div class="rgi-extra">
 								<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
@@ -184,12 +184,12 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="recent-game-item">
-						<div class="rgi-thumb set-bg" data-setbg="img/recent-game/2.jpg">
+						<div class="rgi-thumb set-bg" data-setbg="img/recent-game/2.png">
 							<div class="cata racing">състезателни</div>
 						</div>
 						<div class="rgi-content">
-							<h5>Susce pulvinar metus nulla, vel  facilisis sem </h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
+							<h5>Gran Turismo 7 </h5>
+							<p>Феновете на популярната поредица очакват появата на играта през 2020г. </p>
 							<a href="#" class="comment">3 коментара</a>
 							<div class="rgi-extra">
 								<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
@@ -204,8 +204,8 @@
 							<div class="cata adventure">приключенски</div>
 						</div>
 						<div class="rgi-content">
-							<h5>Suspendisse ut justo tem por, rutrum</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
+							<h5>DOOM Ethernal</h5>
+							<p>Говори се, че играта ще е на пазара в края на март 2020г. </p>
 							<a href="#" class="comment">3 коментара</a>
 							<div class="rgi-extra">
 								<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
@@ -281,7 +281,7 @@
 							<div class="score yellow">9.3</div>
 						</div>
 						<div class="review-text">
-							<h5>Assasin’’s Creed: Unity</h5>
+							<h5>Assasin’s Creed: Unity</h5>
 							<p>Играта, издадена от Ubisoft в края на 2015 г., все още е доста популярна сред общността.</p>
 						</div>
 					</div>
@@ -345,25 +345,25 @@
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/1.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">7 Декември 2019</div>
+									<p>PlayerUnknown's Battlegrounds (PUBG) </p>
+									<a href="#" class="lb-author">От World of GAMING</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/2.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">19 Декември 2019</div>
+									<p>Overwatch 2 </p>
+									<a href="#" class="lb-author">От World of GAMING</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/3.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">1 Януари 2020</div>
+									<p>World of Warcraft Турнир </p>
+									<a href="#" class="lb-author">От World of GAMING</a>
 								</div>
 							</div>
 						</div>
@@ -371,34 +371,34 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-widget">
-						<h4 class="fw-title">Top Comments</h4>
+						<h4 class="fw-title">Топ коментари</h4>
 						<div class="top-comment">
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/1.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">gospoda_92</a> <span>на тема</span>  DOTA 2</p>
+									<div class="tc-date">19 декември 2020</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/2.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">igra4a99</a> <span>на тема</span>  Euro Truck Simulator 2</p>
+									<div class="tc-date">25 Декември 2019</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/3.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">smiteraa</a> <span>на тема</span>  GTA V</p>
+									<div class="tc-date">27 декември 2019</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/4.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">sa6ko0o</a> <span>на тема</span>  DOOM Ethernal</p>
+									<div class="tc-date">2 Януари 2020</div>
 								</div>
 							</div>
 						</div>
