--- a/game-warrior-gh-pages/game-warrior-gh-pages/index.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>World of GAMING</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Game Warrior Template">
+	<meta name="description" content="World of GAMING">
 	<meta name="keywords" content=" game, gaming, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
@@ -75,7 +75,7 @@
 				<div class="hs-text">
 					<div class="container">
 						<h2>Най - добрите <span>Игри</span> на пазара</h2>
-						<p><strong>Overwatch:</strong> В третата седмица (24.12.2019 - 02.01.2020) на коледното събитие в играта,<br> а именно "Overwatch Winter Wonderland 2019"  при 3 победи печелите<br> Snow Angel Player Icon, пri 6 Winter Spell Spray, а при 9 - Snow Angel Mercy Skin.</p>
+						<p><strong>Overwatch</strong>: В третата седмица (24.12.2019 - 02.01.2020) на коледното събитие в играта,<br> а именно "Overwatch Winter Wonderland 2019"  при 3 победи печелите<br> Snow Angel Player Icon, при 6 Winter Spell Spray, а при 9 - Snow Angel Mercy Skin.</p>
 						<a href="#" class="site-btn">Прочетете още</a>
 					</div>
 				</div>
@@ -84,7 +84,7 @@
 				<div class="hs-text">
 					<div class="container">
 						<h2>Най - добрите <span>Игри</span> на пазара</h2>
-						<p><strong>PUBG:</strong> Последният ъпдейт в играта (версия 5.3) дойде през месец Декември<br> с много промени. Вече играчите могат да си запазят настройките за играта в клауд,<br> да избират своето любимо оръжие и още ...</p>
+						<p><strong>PUBG</strong>: Последният ъпдейт в играта (версия 5.3) дойде през месец Декември<br> с много промени. Вече играчите могат да си запазят настройките за играта в клауд,<br> да избират своето любимо оръжие и още ...</p>
 						<a href="#" class="site-btn">Прочетете още</a>
 					</div>
 				</div>
@@ -127,7 +127,7 @@
 						<span class="cata strategy">стратегия</span>
 						<div class="fi-content text-white">
 							<h5><a href="#">Събитието Retribution приключи.</a></h5>
-							<p>Всички, които са успели да се възползват от бунусите, честито! </p>
+							<p>Всички, които са успели да се възползват от бoнусите, честито! </p>
 							<a href="#" class="fi-comment">3 коментара</a>
 						</div>
 					</div>
