--- a/game-warrior-gh-pages/game-warrior-gh-pages/categories.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/categories.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Game Warrior Template</title>
+	<title>Gallery</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Game Warrior Template">
-	<meta name="keywords" content="warrior, game, creative, html">
+	<meta name="description" content="World of GAMING">
+	<meta name="keywords" content=" game, gaming, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="img/tab-logo.png" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
@@ -37,10 +37,10 @@
 		<div class="container">
 			<!-- logo -->
 			<a class="site-logo" href="index.html">
-				<img src="img/logo.png" alt="">
+				<img src="img/logo1.png" alt="">
 			</a>
 			<div class="user-panel">
-				<a href="#">Login</a>  /  <a href="#">Register</a>
+				<a href="#">Вход</a>  /  <a href="#">Регистрация</a>
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
@@ -49,11 +49,11 @@
 			<!-- site menu -->
 			<nav class="main-menu">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="review.html">Games</a></li>
-					<li><a href="categories.html">Blog</a></li>
-					<li><a href="community.html">Forums</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="index.html">Начало</a></li>
+					<li><a href="review.html">Новини</a></li>
+					<li><a href="categories.html">Галерия</a></li>
+					<li><a href="community.html">За нас</a></li>
+					<li><a href="contact.html">Контакти</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -63,12 +63,12 @@
 
 	<!-- Latest news section -->
 	<div class="latest-news-section">
-		<div class="ln-title">Latest News</div>
+		<div class="ln-title">Последни новини</div>
 		<div class="news-ticker">
 			<div class="news-ticker-contant">
-				<div class="nt-item"><span class="new">new</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="strategy">strategy</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="racing">racing</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
+				<div class="nt-item"><span class="new">ново</span>World of Tanks пуснаха версия 1.7.0.1805. </div>
+				<div class="nt-item"><span class="strategy">стратегия</span>Най - добрите играчи на Dota 2 за 2019. </div>
+				<div class="nt-item"><span class="racing">симулатори</span>Euro Truck Simulator 2 с ново DLS - Road to the Black Sea. </div>
 			</div>
 		</div>
 	</div>
@@ -81,8 +81,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 text-white">
-						<h2>Video Gallery</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum.</p>
+						<h2>Галерия</h2>
+						<p>Тук ще откриете различни фотоси от различни игри, прикачени от потребителите на сайта или от нас - админите.</p>
 					</div>
 				</div>
 			</div>
@@ -100,12 +100,10 @@
 						<div class="col-md-6">
 							<div class="recent-game-item">
 								<div class="rgi-thumb set-bg" data-setbg="img/recent-game/1.jpg">
-									<div class="cata new">racing</div>
+									
 								</div>
 								<div class="rgi-content">
-									<h5>Suspendisse ut justo tem por, rutrum</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-									<a href="#" class="comment">3 Comments</a>
+									<h5>Overwatch</h5>
 									<div class="rgi-extra">
 										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -115,13 +113,10 @@
 						</div>
 						<div class="col-md-6">
 							<div class="recent-game-item">
-								<div class="rgi-thumb set-bg" data-setbg="img/recent-game/2.jpg">
-									<div class="cata racing">racing</div>
+								<div class="rgi-thumb set-bg" data-setbg="img/recent-game/2.png">
 								</div>
 								<div class="rgi-content">
-									<h5>Susce pulvinar metus nulla, vel  facilisis sem </h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-									<a href="#" class="comment">3 Comments</a>
+									<h5>Gran Turismo 7</h5>
 									<div class="rgi-extra">
 										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -132,12 +127,9 @@
 						<div class="col-md-6">
 							<div class="recent-game-item">
 								<div class="rgi-thumb set-bg" data-setbg="img/recent-game/3.jpg">
-									<div class="cata adventure">Adventure</div>
 								</div>
 								<div class="rgi-content">
-									<h5>Susce pulvinar metus nulla, vel  facilisis sem </h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-									<a href="#" class="comment">3 Comments</a>
+									<h5>DOOM</h5>
 									<div class="rgi-extra">
 										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -148,12 +140,9 @@
 						<div class="col-md-6">
 							<div class="recent-game-item">
 								<div class="rgi-thumb set-bg" data-setbg="img/recent-game/4.jpg">
-									<div class="cata new">racing</div>
 								</div>
 								<div class="rgi-content">
-									<h5>Suspendisse ut justo tem por, rutrum</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-									<a href="#" class="comment">3 Comments</a>
+									<h5>World of WarCraft</h5>
 									<div class="rgi-extra">
 										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -164,12 +153,9 @@
 						<div class="col-md-6">
 							<div class="recent-game-item">
 								<div class="rgi-thumb set-bg" data-setbg="img/recent-game/5.jpg">
-									<div class="cata racing">racing</div>
 								</div>
 								<div class="rgi-content">
-									<h5>Susce pulvinar metus nulla, vel  facilisis sem </h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-									<a href="#" class="comment">3 Comments</a>
+									<h5>Euro Truck Simulator 2 </h5>
 									<div class="rgi-extra">
 										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -180,12 +166,9 @@
 						<div class="col-md-6">
 							<div class="recent-game-item">
 								<div class="rgi-thumb set-bg" data-setbg="img/recent-game/6.jpg">
-									<div class="cata adventure">Adventure</div>
 								</div>
 								<div class="rgi-content">
-									<h5>Susce pulvinar metus nulla, vel  facilisis sem </h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-									<a href="#" class="comment">3 Comments</a>
+									<h5>Need for Speed </h5>
 									<div class="rgi-extra">
 										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -196,12 +179,9 @@
 						<div class="col-md-6">
 							<div class="recent-game-item">
 								<div class="rgi-thumb set-bg" data-setbg="img/recent-game/7.jpg">
-									<div class="cata new">racing</div>
 								</div>
 								<div class="rgi-content">
-									<h5>Suspendisse ut justo tem por, rutrum</h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-									<a href="#" class="comment">3 Comments</a>
+									<h5>PlayerUnknown's Battlegrounds</h5>
 									<div class="rgi-extra">
 										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -212,12 +192,9 @@
 						<div class="col-md-6">
 							<div class="recent-game-item">
 								<div class="rgi-thumb set-bg" data-setbg="img/recent-game/8.jpg">
-									<div class="cata racing">racing</div>
 								</div>
 								<div class="rgi-content">
-									<h5>Susce pulvinar metus nulla, vel  facilisis sem </h5>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit amet, consectetur elit. </p>
-									<a href="#" class="comment">3 Comments</a>
+									<h5>Counter-Strike: Global Offensive </h5>
 									<div class="rgi-extra">
 										<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 										<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -227,9 +204,9 @@
 						</div>
 					</div>
 					<div class="site-pagination">
-						<span class="active">01.</span>
-						<a href="#">02.</a>
-						<a href="#">03.</a>
+						<span class="active">1</span>
+						<a href="#">2</a>
+						<a href="#">3</a>
 					</div>
 				</div>
 				<!-- sidebar -->
@@ -237,63 +214,59 @@
 					<!-- widget -->
 					<div class="widget-item">
 						<form class="search-widget">
-							<input type="text" placeholder="Search">
+							<input type="text" placeholder="Търси">
 							<button><i class="fa fa-search"></i></button>
 						</form>
 					</div>
 					<!-- widget -->
 					<div class="widget-item">
-						<h4 class="widget-title">Latest Posts</h4>
+						<h4 class="widget-title">Последни публикации</h4>
 						<div class="latest-blog">
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/1.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Ipsum dolor sit amet, consectetur adipisc ing consecips</p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">7 Декември 2019</div>
+									<p>PlayerUnknown's Battlegrounds (PUBG) </p>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/2.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Ipsum dolor sit amet, consectetur adipisc ing consecips</p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">19 Декември 2019</div>
+									<p>Overwatch 2 </p>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/3.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Ipsum dolor sit amet, consectetur adipisc ing consecips</p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">1 Януари 2020</div>
+									<p>World of Warcraft Турнир </p>
 								</div>
 							</div>
 						</div>
-					</div>
 					<!-- widget -->
 					<div class="widget-item">
-						<h4 class="widget-title">Top Comments</h4>
+						<h4 class="widget-title">Топ коментари</h4>
 						<div class="top-comment">
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/1.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span> Lorem consec ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">gospoda_92</a> <span>на тема</span>  DOTA 2</p>
+									<div class="tc-date">19 декември 2020</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/2.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">Michael James</a> <span>on</span>Cras sit amet sapien aliquam</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">igra4a99</a> <span>на тема</span>  Euro Truck Simulator 2</p>
+									<div class="tc-date">25 Декември 2019</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/3.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">Justin More</a> <span>on</span> Lorem ipsum dolor consecsit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">smiteraa</a> <span>на тема</span>  GTA V</p>
+									<div class="tc-date">27 декември 2019</div>
 								</div>
 							</div>
 						</div>
@@ -301,11 +274,10 @@
 					<!-- widget -->
 					<div class="widget-item">
 						<div class="feature-item set-bg" data-setbg="img/features/1.jpg">
-							<span class="cata new">new</span>
+							<span class="cata new">ново</span>
 							<div class="fi-content text-white">
-								<h5><a href="#">Suspendisse ut justo tem por, rutrum</a></h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-								<a href="#" class="fi-comment">3 Comments</a>
+								<h5><a href="#">World of Warcraft раздава награди.</a></h5>
+								<p>По случай 15 години от създаването на играта, играчите получават бонуси. </p>
 							</div>
 						</div>
 					</div>
@@ -316,8 +288,8 @@
 								<div class="score yellow">9.3</div>
 							</div>
 							<div class="review-text">
-								<h5>Assasin’’s Creed</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+								<h5>Assasin’s Creed: Unity</h5>
+								<p>Играта, издадена от Ubisoft в края на 2015 г., все още е доста популярна сред общността.</p>
 							</div>
 						</div>
 					</div>
@@ -337,36 +309,36 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="footer-logo text-white">
-						<img src="img/footer-logo.png" alt="">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+						<img src="img/logo1.png" alt="">
+						<p>За повече информация отностно "World of GAMING", натиснете таба "За нас" от менюто.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-widget mb-5 mb-md-0">
-						<h4 class="fw-title">Latest Posts</h4>
+						<h4 class="fw-title">Последни публикации</h4>
 						<div class="latest-blog">
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/1.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">7 Декември 2019</div>
+									<p>PlayerUnknown's Battlegrounds (PUBG) </p>
+									<a href="#" class="lb-author">От World of GAMING</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/2.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">19 Декември 2019</div>
+									<p>Overwatch 2 </p>
+									<a href="#" class="lb-author">От World of GAMING</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/3.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">1 Януари 2020</div>
+									<p>World of Warcraft Турнир </p>
+									<a href="#" class="lb-author">От World of GAMING</a>
 								</div>
 							</div>
 						</div>
@@ -374,34 +346,34 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-widget">
-						<h4 class="fw-title">Top Comments</h4>
+						<h4 class="fw-title">Топ коментари</h4>
 						<div class="top-comment">
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/1.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">gospoda_92</a> <span>на тема</span>  DOTA 2</p>
+									<div class="tc-date">19 декември 2020</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/2.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">igra4a99</a> <span>на тема</span>  Euro Truck Simulator 2</p>
+									<div class="tc-date">25 Декември 2019</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/3.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">smiteraa</a> <span>на тема</span>  GTA V</p>
+									<div class="tc-date">27 декември 2019</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/4.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">sa6ko0o</a> <span>на тема</span>  DOOM Ethernal</p>
+									<div class="tc-date">2 Януари 2020</div>
 								</div>
 							</div>
 						</div>
@@ -417,11 +389,11 @@
 	<footer class="footer-section">
 		<div class="container">
 			<ul class="footer-menu">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="review.html">Games</a></li>
-				<li><a href="categories.html">Blog</a></li>
-				<li><a href="community.html">Forums</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="index.html">Начало</a></li>
+				<li><a href="review.html">Новини</a></li>
+				<li><a href="categories.html">Галерия</a></li>
+				<li><a href="community.html">За нас</a></li>
+				<li><a href="contact.html">Контакти</a></li>
 			</ul>
 			<p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
