--- a/game-warrior-gh-pages/game-warrior-gh-pages/review.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/review.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Game Warrior Template</title>
+	<title>News</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Game Warrior Template">
-	<meta name="keywords" content="warrior, game, creative, html">
+	<meta name="description" content="World of GAMING">
+	<meta name="keywords" content=" game, gaming, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="img/tab-logo.png" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
@@ -37,10 +37,10 @@
 		<div class="container">
 			<!-- logo -->
 			<a class="site-logo" href="index.html">
-				<img src="img/logo.png" alt="">
+				<img src="img/logo1.png" alt="">
 			</a>
 			<div class="user-panel">
-				<a href="#">Login</a>  /  <a href="#">Register</a>
+				<a href="#">Вход</a>  /  <a href="#">Регистрация</a>
 			</div>
 			<!-- responsive -->
 			<div class="nav-switch">
@@ -49,11 +49,11 @@
 			<!-- site menu -->
 			<nav class="main-menu">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="review.html">Games</a></li>
-					<li><a href="categories.html">Blog</a></li>
-					<li><a href="community.html">Forums</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="index.html">Начало</a></li>
+					<li><a href="review.html">Новини</a></li>
+					<li><a href="categories.html">Галерия</a></li>
+					<li><a href="community.html">За нас</a></li>
+					<li><a href="contact.html">Контакти</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -63,12 +63,12 @@
 
 	<!-- Latest news section -->
 	<div class="latest-news-section">
-		<div class="ln-title">Latest News</div>
+		<div class="ln-title">Последни новини</div>
 		<div class="news-ticker">
 			<div class="news-ticker-contant">
-				<div class="nt-item"><span class="new">new</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="strategy">strategy</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
-				<div class="nt-item"><span class="racing">racing</span>Isum dolor sit amet, consectetur adipiscing elit. </div>
+				<div class="nt-item"><span class="new">ново</span>World of Tanks пуснаха версия 1.7.0.1805. </div>
+				<div class="nt-item"><span class="strategy">стратегия</span>Най - добрите играчи на Dota 2 за 2019. </div>
+				<div class="nt-item"><span class="racing">симулатори</span>Euro Truck Simulator 2 с ново DLS - Road to the Black Sea. </div>
 			</div>
 		</div>
 	</div>
@@ -81,8 +81,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 text-white">
-						<h2>Game reviews</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum.</p>
+						<h2>Ревюта на игри</h2>
+						<p>В тази страница ще намерите ревюта на различни игри, нешето мнение за тях и оценка по десетобалната система на всяка игра.</p>
 					</div>
 				</div>
 			</div>
@@ -109,14 +109,14 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Обновлението за играта по случай Хелоуин беше добре прието от общността. Добра графика и добра физика. </p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/6.jpg">
-							<div class="score yellow">9.3</div>
+							<div class="score yellow">9.8</div>
 						</div>
 						<div class="review-text">
 							<h4>Grand Theft Auto</h4>
@@ -125,16 +125,16 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
-								<i class="fa fa-star is-fade"></i>
+								<i class="fa fa-star"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Една от най - любимите игри на поколения геймъри. Няма човек, който да не е играл поне една от версиите на играта. Rockstar удариха джакпот с тази поредица.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/7.jpg">
-							<div class="score yellow">9.3</div>
+							<div class="score yellow">7.4</div>
 						</div>
 						<div class="review-text">
 							<h4>Avatar</h4>
@@ -142,17 +142,17 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
+								<i class="fa fa-star is-fade"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Направена по едноимения филм, играта беше посрещната със смесени чувства от общността. За времето си, има доста добра графика, но след 10 години време вече не е на ниво.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/8.jpg">
-							<div class="score yellow">9.3</div>
+							<div class="score yellow">8.3</div>
 						</div>
 						<div class="review-text">
 							<h4>Anthem</h4>
@@ -163,14 +163,14 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Разработена от BioWare, но публикувана от ЕА, играта е поредния third person шуутър, който потребителите все още разучават. Въпреки това, повечето, поробвали играта, я харесват. </p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/9.jpg">
-							<div class="score yellow">9.3</div>
+							<div class="score yellow">6.6</div>
 						</div>
 						<div class="review-text">
 							<h4>Cyberpunk 2077</h4>
@@ -178,17 +178,17 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
-								<i class="fa fa-star"></i>
+								<i class="fa fa-star is-fade"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Създадена от послката компания CD Projekt, играта има доста голям потенциал. Въпреки поддръжката на различни платформи, тя не се радва на голям интерес от общността.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/10.jpg">
-							<div class="score yellow">9.3</div>
+							<div class="score yellow">8.2</div>
 						</div>
 						<div class="review-text">
 							<h4>Spiderman</h4>
@@ -199,13 +199,13 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star is-fade"></i>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame. Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Още една от игрите, създадени въз основа на филм. феновете на поредицата бяха доста въудошевени от новината за играта.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="text-center pt-4">
-				<button class="site-btn btn-sm">Load More</button>
+				<button class="site-btn btn-sm">Покажи още</button>
 			</div>
 		</div>
 	</section>
@@ -216,8 +216,8 @@
 	<section class="review-section review-dark spad set-bg" data-setbg="img/review-bg-2.jpg">
 		<div class="container">
 			<div class="section-title text-white">
-				<div class="cata new">new</div>
-				<h2>Recent Reviews</h2>
+				<div class="cata new">ново</div>
+				<h2>Последно добавени</h2>
 			</div>
 			<div class="row text-white">
 				<div class="col-lg-3 col-md-6">
@@ -226,30 +226,30 @@
 							<div class="score yellow">9.3</div>
 						</div>
 						<div class="review-text">
-							<h5>Assasin’’s Creed</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<h5>Assasin’s Creed: Unity</h5>
+							<p>Играта, издадена от Ubisoft в края на 2015 г., все още е доста популярна сред общността.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/2.jpg">
-							<div class="score purple">9.5</div>
+							<div class="score purple">7.9</div>
 						</div>
 						<div class="review-text">
-							<h5>Doom</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<h5>DООМ</h5>
+							<p>Последната версия на играта се появи на бял свят през 2016г. Привлича интерес, но феновете тръпнат в очакване на DOOM:Eternal.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="review-item">
 						<div class="review-cover set-bg" data-setbg="img/review/3.jpg">
-							<div class="score green">9.1</div>
+							<div class="score green">8.5</div>
 						</div>
 						<div class="review-text">
 							<h5>Overwatch</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<p>Анимираният шуутър, популярен най-вече заради възможността за мултиплеър, редовно бива игран от феновете на Blizzard Entertainment</p>
 						</div>
 					</div>
 				</div>
@@ -259,8 +259,8 @@
 							<div class="score pink">9.7</div>
 						</div>
 						<div class="review-text">
-							<h5>GTA</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+							<h5>GTA V</h5>
+							<p>Класическата игра, с която поколения израстнаха. Последната й версия е от 2013 г., произведението на Rockstar Games бива играно от милиони потребители по света.</p>
 						</div>
 					</div>
 				</div>
@@ -279,36 +279,36 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="footer-logo text-white">
-						<img src="img/footer-logo.png" alt="">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum dolor sit ame.</p>
+						<img src="img/logo1.png" alt="">
+						<p>За повече информация отностно "World of GAMING", натиснете таба "За нас" от менюто.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-widget mb-5 mb-md-0">
-						<h4 class="fw-title">Latest Posts</h4>
+						<h4 class="fw-title">Последни публикации</h4>
 						<div class="latest-blog">
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/1.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">7 Декември 2019</div>
+									<p>PlayerUnknown's Battlegrounds (PUBG) </p>
+									<a href="#" class="lb-author">От World of GAMING</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/2.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">19 Декември 2019</div>
+									<p>Overwatch 2 </p>
+									<a href="#" class="lb-author">От World of GAMING</a>
 								</div>
 							</div>
 							<div class="lb-item">
 								<div class="lb-thumb set-bg" data-setbg="img/latest-blog/3.jpg"></div>
 								<div class="lb-content">
-									<div class="lb-date">June 21, 2018</div>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisc ing ipsum </p>
-									<a href="#" class="lb-author">By Admin</a>
+									<div class="lb-date">1 Януари 2020</div>
+									<p>World of Warcraft Турнир </p>
+									<a href="#" class="lb-author">От World of GAMING</a>
 								</div>
 							</div>
 						</div>
@@ -316,34 +316,34 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="footer-widget">
-						<h4 class="fw-title">Top Comments</h4>
+						<h4 class="fw-title">Топ коментари</h4>
 						<div class="top-comment">
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/1.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">gospoda_92</a> <span>на тема</span>  DOTA 2</p>
+									<div class="tc-date">19 декември 2020</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/2.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">igra4a99</a> <span>на тема</span>  Euro Truck Simulator 2</p>
+									<div class="tc-date">25 Декември 2019</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/3.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">smiteraa</a> <span>на тема</span>  GTA V</p>
+									<div class="tc-date">27 декември 2019</div>
 								</div>
 							</div>
 							<div class="tc-item">
 								<div class="tc-thumb set-bg" data-setbg="img/authors/4.jpg"></div>
 								<div class="tc-content">
-									<p><a href="#">James Smith</a> <span>on</span>  Lorem ipsum dolor sit amet, co</p>
-									<div class="tc-date">June 21, 2018</div>
+									<p><a href="#">sa6ko0o</a> <span>на тема</span>  DOOM Ethernal</p>
+									<div class="tc-date">2 Януари 2020</div>
 								</div>
 							</div>
 						</div>
@@ -359,11 +359,11 @@
 	<footer class="footer-section">
 		<div class="container">
 			<ul class="footer-menu">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="review.html">Games</a></li>
-				<li><a href="categories.html">Blog</a></li>
-				<li><a href="community.html">Forums</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="index.html">Начало</a></li>
+				<li><a href="review.html">Новини</a></li>
+				<li><a href="categories.html">Галерия</a></li>
+				<li><a href="community.html">За нас</a></li>
+				<li><a href="contact.html">Контакти</a></li>
 			</ul>
 			<p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
