таб новини - започнат

--- a/game-warrior-gh-pages/game-warrior-gh-pages/community.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/community.html
@@ -52,7 +52,8 @@
 			<nav class="main-menu">
 				<ul>
 					<li><a href="index.html">Начало</a></li>
-					<li><a href="review.html">Новини</a></li>
+					<li><a href="news.html">Новини</a></li>
+					<li><a href="review.html">Ревюта</a></li>
 					<li><a href="categories.html">Галерия</a></li>
 					<li><a href="community.html">За нас</a></li>
 					<li><a href="contact.html">Контакти</a></li>
@@ -232,7 +233,8 @@
 		<div class="container">
 			<ul class="footer-menu">
 				<li><a href="index.html">Начало</a></li>
-				<li><a href="review.html">Новини</a></li>
+				<li><a href="news.html">Новини</a></li>
+				<li><a href="review.html">Ревюта</a></li>
 				<li><a href="categories.html">Галерия</a></li>
 				<li><a href="community.html">За нас</a></li>
 				<li><a href="contact.html">Контакти</a></li>
