--- a/game-warrior-gh-pages/game-warrior-gh-pages/contact.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/contact.html
@@ -52,7 +52,8 @@
 			<nav class="main-menu">
 				<ul>
 					<li><a href="index.html">Начало</a></li>
-					<li><a href="review.html">Новини</a></li>
+					<li><a href="news.html">Новини</a></li>
+					<li><a href="review.html">Ревюта</a></li>
 					<li><a href="categories.html">Галерия</a></li>
 					<li><a href="community.html">За нас</a></li>
 					<li><a href="contact.html">Контакти</a></li>
@@ -233,10 +234,11 @@
 		<div class="container">
 			<ul class="footer-menu">
 				<li><a href="index.html">Начало</a></li>
-				<li><a href="review.html">Новини</a></li>
-				<li><a href="categories.html">Галерия</a></li>
-				<li><a href="community.html">За нас</a></li>
-				<li><a href="contact.html">Контакти</a></li>
+					<li><a href="news.html">Новини</a></li>
+					<li><a href="review.html">Ревюта</a></li>
+					<li><a href="categories.html">Галерия</a></li>
+					<li><a href="community.html">За нас</a></li>
+					<li><a href="contact.html">Контакти</a></li>
 			</ul>
 			<p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
