--- a/game-warrior-gh-pages/game-warrior-gh-pages/news.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>World of GAMING</title>
+	<title>News</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="World of GAMING">
 	<meta name="keywords" content=" game, gaming, html">
@@ -70,32 +70,6 @@
 	<!-- Header section end -->
 
 
-	<!-- Hero section -->
-	<section class="hero-section">
-		<div class="hero-slider owl-carousel">
-			<div class="hs-item set-bg" data-setbg="img/slider-1.jpg">
-				<div class="hs-text">
-					<div class="container">
-						<h2>Най - добрите <span>Игри</span> на пазара</h2>
-						<p><strong>Overwatch</strong>: В третата седмица (24.12.2019 - 02.01.2020) на коледното събитие в играта,<br> а именно "Overwatch Winter Wonderland 2019"  при 3 победи печелите<br> Snow Angel Player Icon, при 6 Winter Spell Spray, а при 9 - Snow Angel Mercy Skin.</p>
-						<a href="#" class="site-btn">Прочетете още</a>
-					</div>
-				</div>
-			</div>
-			<div class="hs-item set-bg" data-setbg="img/slider-2.jpg">
-				<div class="hs-text">
-					<div class="container">
-						<h2>Най - добрите <span>Игри</span> на пазара</h2>
-						<p><strong>PUBG</strong>: Последният ъпдейт в играта (версия 5.3) дойде през месец Декември<br> с много промени. Вече играчите могат да си запазят настройките за играта в клауд,<br> да избират своето любимо оръжие и още ...</p>
-						<a href="#" class="site-btn">Прочетете още</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Hero section end -->
-
-
 	<!-- Latest news section -->
 	<div class="latest-news-section">
 		<div class="ln-title">Последни новини</div>
@@ -110,6 +84,21 @@
 	<!-- Latest news section end -->
 
 
+<!-- Page info section -->
+	<section class="page-info-section set-bg" data-setbg="img/page-top-bg/2.jpg">
+		<div class="pi-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-5 col-lg-6 text-white">
+						<h2>Новини</h2>
+						<p>Тук ще откриете последните новини, свързани с гейминг индустрията.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Page info section -->
+
 	<!-- Feature section -->
 	<section class="feature-section spad">
 		<div class="container">
@@ -120,6 +109,7 @@
 						<div class="fi-content text-white">
 							<h5><a href="#">World of Warcraft раздава награди.</a></h5>
 							<p>По случай 15 години от създаването на играта, играчите получават бонуси. </p>
+							<a href="#" class="fi-comment">3 коментара</a>
 						</div>
 					</div>
 				</div>
@@ -129,6 +119,7 @@
 						<div class="fi-content text-white">
 							<h5><a href="#">Събитието Retribution приключи.</a></h5>
 							<p>Всички, които са успели да се възползват от бoнусите, честито! </p>
+							<a href="#" class="fi-comment">3 коментара</a>
 						</div>
 					</div>
 				</div>
@@ -138,6 +129,7 @@
 						<div class="fi-content text-white">
 							<h5><a href="#">Коледно събитие в Overwatch.</a></h5>
 							<p>В "Overwatch Winter Wonderland 2019", при 3 победи печелите Snow Angel Player Icon.</p>
+							<a href="#" class="fi-comment">3 коментара</a>
 						</div>
 					</div>
 				</div>
@@ -147,6 +139,7 @@
 						<div class="fi-content text-white">
 							<h5><a href="#">България, Румъния и Труция в ETS2!</a></h5>
 							<p>За 17,99€ можете да закупите последното DLS. </p>
+							<a href="#" class="fi-comment">3 коментара</a>
 						</div>
 					</div>
 				</div>
@@ -172,6 +165,7 @@
 						<div class="rgi-content">
 							<h5>Overwatch 2</h5>
 							<p>Blizzard анонсираха играта на своето събитие BlizzCon 2019. </p>
+							<a href="#" class="comment">3 коментара</a>
 							<div class="rgi-extra">
 								<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 								<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -187,6 +181,7 @@
 						<div class="rgi-content">
 							<h5>Gran Turismo 7 </h5>
 							<p>Феновете на популярната поредица очакват появата на играта през 2020г. </p>
+							<a href="#" class="comment">3 коментара</a>
 							<div class="rgi-extra">
 								<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 								<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
@@ -202,6 +197,7 @@
 						<div class="rgi-content">
 							<h5>DOOM Ethernal</h5>
 							<p>Говори се, че играта ще е на пазара в края на март 2020г. </p>
+							<a href="#" class="comment">3 коментара</a>
 							<div class="rgi-extra">
 								<div class="rgi-star"><img src="img/icons/star.png" alt=""></div>
 								<div class="rgi-heart"><img src="img/icons/heart.png" alt=""></div>
