--- a/game-warrior-gh-pages/game-warrior-gh-pages/contact.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/contact.html
@@ -84,7 +84,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 text-white">
-						<h2>Свржете се с нас.</h2>
+						<h2>Свржете се с нас</h2>
 						<p>Имате въпрос, идея или затруднение при ползването на сайта? Не се притеснявайте да се свържете със нас, като използвате някой от начините, показани по долу.</p>
 					</div>
 				</div>
