--- a/game-warrior-gh-pages/game-warrior-gh-pages/index.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/index.html
@@ -78,7 +78,7 @@
 					<div class="container">
 						<h2>Най - добрите <span>Игри</span> на пазара</h2>
 						<p><strong>Overwatch</strong>: В третата седмица (24.12.2019 - 02.01.2020) на коледното събитие в играта,<br> а именно "Overwatch Winter Wonderland 2019"  при 3 победи печелите<br> Snow Angel Player Icon, при 6 Winter Spell Spray, а при 9 - Snow Angel Mercy Skin.</p>
-						<a href="#" class="site-btn">Прочетете още</a>
+						<a href="game-reviews.html" class="site-btn">Прочетете още</a>
 					</div>
 				</div>
 			</div>
